# tocsin

./: .gitignore  AUTHORS.md  CHANGELOG.md  LICENCE  Makefile  README.md  README.rst  pyproject.toml
src/: bitrot.py  tocsin.1  tocsin.py
tests/: test_tocsin.py
