[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "tocsin"
authors = [
    {name = "Łukasz Langa", email = "lukasz@langa.pl"},
    {name = "Alexander Möller", email = "alexander.moeller@detmold.com"}
]
description = "Script to detect bit rot, fork of ambv/bitrot"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["file", "checksum", "database"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",

]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-order"]

[project.scripts]
tocsin = "tocsin:run_from_command_line"

[tool.setuptools_scm]
tag_regex = "^(?P<version>v\\d+(?:\\.\\d+){0,2}[^\\+]*)(?:\\+.*)?$"
